@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "44u [Sun 27 Sep 09:29:09 BST 2020]"
-BUILD = "09270929"
+VERSION = "44u [Mon 28 Sep 11:14:25 BST 2020]"
+BUILD = "09281114"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
